# test-cmake-conditional-include

./: .gitignore  CMakeLists.txt  test.sh
src/: main.cc  main.h
